{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 40,
  "lineage": "5a213ef1-d5f1-20a6-169d-fb4996fa3da0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "BACKEND_SERVICES_ROUTE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:891377261650:route-table/rtb-027b542452c53b563",
            "default_route_table_id": "rtb-027b542452c53b563",
            "id": "rtb-027b542452c53b563",
            "owner_id": "891377261650",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f19e93d0f2095100",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-02123de2222c12075",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "12.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-02123de2222c12075",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "BACKEND_SERVICES_ROUTE"
            },
            "tags_all": {
              "Name": "BACKEND_SERVICES_ROUTE"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fd0b53deec73ef30"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.BACKEND_SERVICES_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "SHARED_DATABASE_ROUTE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:891377261650:route-table/rtb-01a3998a0243392f5",
            "default_route_table_id": "rtb-01a3998a0243392f5",
            "id": "rtb-01a3998a0243392f5",
            "owner_id": "891377261650",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03298f74a3ca1e12f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-02123de2222c12075",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "11.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-02123de2222c12075",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "SHARED_DATABASE_ROUTE"
            },
            "tags_all": {
              "Name": "SHARED_DATABASE_ROUTE"
            },
            "timeouts": null,
            "vpc_id": "vpc-006fbadea3e56c583"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.SHARED_DATABASE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "WEB_APP_ROUTE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:891377261650:route-table/rtb-03a6400e773d72814",
            "default_route_table_id": "rtb-03a6400e773d72814",
            "id": "rtb-03a6400e773d72814",
            "owner_id": "891377261650",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03186e9669295c1fc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "11.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-02123de2222c12075",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "12.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-02123de2222c12075",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "WEB_APP_ROUTE"
            },
            "tags_all": {
              "Name": "WEB_APP_ROUTE"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be87c5dc0f7c90a8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.WEB_APP_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:891377261650:security-group/sg-0212a350a51f1e8a9",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0212a350a51f1e8a9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "891377261650",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Webapp-sg"
            },
            "tags_all": {
              "Name": "Webapp-sg"
            },
            "vpc_id": "vpc-0be87c5dc0f7c90a8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.WEB_APP_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:891377261650:security-group/sg-07076e1a492d389b7",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07076e1a492d389b7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "891377261650",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "BackendServices-sg"
            },
            "tags_all": {
              "Name": "BackendServices-sg"
            },
            "vpc_id": "vpc-0fd0b53deec73ef30"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.BACKEND_SERVICES_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:891377261650:security-group/sg-04df7a95f70f9850b",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04df7a95f70f9850b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "891377261650",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Shareddatabase-sg"
            },
            "tags_all": {
              "Name": "Shareddatabase-sg"
            },
            "vpc_id": "vpc-006fbadea3e56c583"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.SHARED_DATABASE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:ap-southeast-2:891377261650:transit-gateway/tgw-02123de2222c12075",
            "association_default_route_table_id": "tgw-rtb-0657d50f10187afe8",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "tg-web-backend-database",
            "dns_support": "enable",
            "id": "tgw-02123de2222c12075",
            "multicast_support": "disable",
            "owner_id": "891377261650",
            "propagation_default_route_table_id": "tgw-rtb-0657d50f10187afe8",
            "tags": {
              "Name": "Web-Backend-Database Transit Gateway"
            },
            "tags_all": {
              "Name": "Web-Backend-Database Transit Gateway"
            },
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "backend_services_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-0d4ddb073351a8801",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-00f8c5adedd4bffff"
            ],
            "tags": {
              "Name": "Backend Services VPC Attachment"
            },
            "tags_all": {
              "Name": "Backend Services VPC Attachment"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-02123de2222c12075",
            "vpc_id": "vpc-0fd0b53deec73ef30",
            "vpc_owner_id": "891377261650"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.example",
            "aws_subnet.BACKEND_SERVICES_SUBNET",
            "aws_vpc.BACKEND_SERVICES_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "shared_database_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-0ea5f920f1cbaad12",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-0d67b8166e5659057"
            ],
            "tags": {
              "Name": "Shared database VPC Attachment"
            },
            "tags_all": {
              "Name": "Shared database VPC Attachment"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-02123de2222c12075",
            "vpc_id": "vpc-006fbadea3e56c583",
            "vpc_owner_id": "891377261650"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.example",
            "aws_subnet.SHARED_DATABASE_SUBNET",
            "aws_vpc.SHARED_DATABASE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "web_app_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-05960567dd5008330",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-091b9336c195fc68f"
            ],
            "tags": {
              "Name": "Web App VPC Attachment2"
            },
            "tags_all": {
              "Name": "Web App VPC Attachment2"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-02123de2222c12075",
            "vpc_id": "vpc-0be87c5dc0f7c90a8",
            "vpc_owner_id": "891377261650"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.example",
            "aws_subnet.WEB_APP_SUBNET",
            "aws_vpc.WEB_APP_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backendservices_linux",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0892a9c01908fafd1",
            "arn": "arn:aws:ec2:ap-southeast-2:891377261650:instance/i-0b4ce18377051626a",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b4ce18377051626a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sydney",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ee4adbbff191aa6c",
            "private_dns": "ip-11-0-1-57.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "11.0.1.57",
            "public_ip": "54.252.235.205",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08ae0fc0d7c978206",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00f8c5adedd4bffff",
            "tags": {
              "Name": "Backend-Services-Linux-Instance"
            },
            "tags_all": {
              "Name": "Backend-Services-Linux-Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07076e1a492d389b7"
            ]
          },
          "dependencies": [
            "aws_default_security_group.default2",
            "aws_subnet.BACKEND_SERVICES_SUBNET",
            "aws_vpc.BACKEND_SERVICES_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "shareddatabase_linux",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0892a9c01908fafd1",
            "arn": "arn:aws:ec2:ap-southeast-2:891377261650:instance/i-0fd968dfb91d22b5f",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fd968dfb91d22b5f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sydney",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-080ed08629931ca66",
            "private_dns": "ip-12-0-1-8.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "12.0.1.8",
            "public_ip": "3.27.189.241",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0412f0b92c00eede2",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d67b8166e5659057",
            "tags": {
              "Name": "SharedDatabase-Linux-Instance"
            },
            "tags_all": {
              "Name": "SharedDatabase-Linux-Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04df7a95f70f9850b"
            ]
          },
          "dependencies": [
            "aws_default_security_group.default3",
            "aws_subnet.SHARED_DATABASE_SUBNET",
            "aws_vpc.SHARED_DATABASE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webapp_linux",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0892a9c01908fafd1",
            "arn": "arn:aws:ec2:ap-southeast-2:891377261650:instance/i-060c4483afdf93dae",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-060c4483afdf93dae",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sydney",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09d66a958cf5ef3bd",
            "private_dns": "ip-10-0-1-219.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.219",
            "public_ip": "13.239.1.189",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e7f85e56166b4024",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-091b9336c195fc68f",
            "tags": {
              "Name": "Webapp-Linux-Instance"
            },
            "tags_all": {
              "Name": "Webapp-Linux-Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0212a350a51f1e8a9"
            ]
          },
          "dependencies": [
            "aws_default_security_group.default",
            "aws_subnet.WEB_APP_SUBNET",
            "aws_vpc.WEB_APP_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "BACKEND_SERVICES_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:891377261650:internet-gateway/igw-0f19e93d0f2095100",
            "id": "igw-0f19e93d0f2095100",
            "owner_id": "891377261650",
            "tags": {
              "Name": "BACKEND_SERVICES_IGW"
            },
            "tags_all": {
              "Name": "BACKEND_SERVICES_IGW"
            },
            "vpc_id": "vpc-0fd0b53deec73ef30"
          },
          "dependencies": [
            "aws_vpc.BACKEND_SERVICES_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "SHARED_DATABASE_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:891377261650:internet-gateway/igw-03298f74a3ca1e12f",
            "id": "igw-03298f74a3ca1e12f",
            "owner_id": "891377261650",
            "tags": {
              "Name": "SHARED_DATABASE_IGW"
            },
            "tags_all": {
              "Name": "SHARED_DATABASE_IGW"
            },
            "vpc_id": "vpc-006fbadea3e56c583"
          },
          "dependencies": [
            "aws_vpc.SHARED_DATABASE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "WEB_APP_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:891377261650:internet-gateway/igw-03186e9669295c1fc",
            "id": "igw-03186e9669295c1fc",
            "owner_id": "891377261650",
            "tags": {
              "Name": "WEB_APP_IGW"
            },
            "tags_all": {
              "Name": "WEB_APP_IGW"
            },
            "vpc_id": "vpc-0be87c5dc0f7c90a8"
          },
          "dependencies": [
            "aws_vpc.WEB_APP_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "backend_services_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f19e93d0f2095100",
            "id": "r-rtb-027b542452c53b5631080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-027b542452c53b563",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_route_table.BACKEND_SERVICES_ROUTE",
            "aws_internet_gateway.BACKEND_SERVICES_IGW",
            "aws_vpc.BACKEND_SERVICES_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "backend_services_to_shared_database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "12.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-027b542452c53b563240108071",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-027b542452c53b563",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-02123de2222c12075",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_route_table.BACKEND_SERVICES_ROUTE",
            "aws_ec2_transit_gateway.example",
            "aws_ec2_transit_gateway_vpc_attachment.backend_services_attachment",
            "aws_subnet.BACKEND_SERVICES_SUBNET",
            "aws_vpc.BACKEND_SERVICES_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "backend_services_to_web_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-027b542452c53b563179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-027b542452c53b563",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-02123de2222c12075",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_route_table.BACKEND_SERVICES_ROUTE",
            "aws_ec2_transit_gateway.example",
            "aws_ec2_transit_gateway_vpc_attachment.backend_services_attachment",
            "aws_subnet.BACKEND_SERVICES_SUBNET",
            "aws_vpc.BACKEND_SERVICES_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "shared_database_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03298f74a3ca1e12f",
            "id": "r-rtb-01a3998a0243392f51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01a3998a0243392f5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_route_table.SHARED_DATABASE_ROUTE",
            "aws_internet_gateway.SHARED_DATABASE_IGW",
            "aws_vpc.SHARED_DATABASE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "shared_database_to_backend_services",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "11.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01a3998a0243392f53849877796",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01a3998a0243392f5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-02123de2222c12075",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_route_table.SHARED_DATABASE_ROUTE",
            "aws_ec2_transit_gateway.example",
            "aws_ec2_transit_gateway_vpc_attachment.shared_database_attachment",
            "aws_subnet.SHARED_DATABASE_SUBNET",
            "aws_vpc.SHARED_DATABASE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "shared_database_to_webapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01a3998a0243392f5179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01a3998a0243392f5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-02123de2222c12075",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_route_table.SHARED_DATABASE_ROUTE",
            "aws_ec2_transit_gateway.example",
            "aws_ec2_transit_gateway_vpc_attachment.shared_database_attachment",
            "aws_subnet.SHARED_DATABASE_SUBNET",
            "aws_vpc.SHARED_DATABASE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "web_app_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03186e9669295c1fc",
            "id": "r-rtb-03a6400e773d728141080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03a6400e773d72814",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_route_table.WEB_APP_ROUTE",
            "aws_internet_gateway.WEB_APP_IGW",
            "aws_vpc.WEB_APP_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "web_app_to_backend_services",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "11.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03a6400e773d728143849877796",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03a6400e773d72814",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-02123de2222c12075",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_route_table.WEB_APP_ROUTE",
            "aws_ec2_transit_gateway.example",
            "aws_ec2_transit_gateway_vpc_attachment.web_app_attachment",
            "aws_subnet.WEB_APP_SUBNET",
            "aws_vpc.WEB_APP_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "web_app_to_shared_database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "12.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03a6400e773d72814240108071",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03a6400e773d72814",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-02123de2222c12075",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_route_table.WEB_APP_ROUTE",
            "aws_ec2_transit_gateway.example",
            "aws_ec2_transit_gateway_vpc_attachment.web_app_attachment",
            "aws_subnet.WEB_APP_SUBNET",
            "aws_vpc.WEB_APP_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "BACKEND_SERVICES_SUBNET",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:891377261650:subnet/subnet-00f8c5adedd4bffff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "11.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00f8c5adedd4bffff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377261650",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "BACKEND_SERVICES_SUBNET"
            },
            "tags_all": {
              "Name": "BACKEND_SERVICES_SUBNET"
            },
            "vpc_id": "vpc-0fd0b53deec73ef30"
          },
          "dependencies": [
            "aws_vpc.BACKEND_SERVICES_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "SHARED_DATABASE_SUBNET",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:891377261650:subnet/subnet-0d67b8166e5659057",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "12.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d67b8166e5659057",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377261650",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SHARED_DAYABASE_SUBNET"
            },
            "tags_all": {
              "Name": "SHARED_DAYABASE_SUBNET"
            },
            "vpc_id": "vpc-006fbadea3e56c583"
          },
          "dependencies": [
            "aws_vpc.SHARED_DATABASE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "WEB_APP_SUBNET",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:891377261650:subnet/subnet-091b9336c195fc68f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-091b9336c195fc68f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377261650",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "WEB_APP_SUBNET"
            },
            "tags_all": {
              "Name": "WEB_APP_SUBNET"
            },
            "vpc_id": "vpc-0be87c5dc0f7c90a8"
          },
          "dependencies": [
            "aws_vpc.WEB_APP_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "BACKEND_SERVICES_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:891377261650:vpc/vpc-0fd0b53deec73ef30",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "11.0.0.0/16",
            "default_network_acl_id": "acl-082d35eba004c2f18",
            "default_route_table_id": "rtb-027b542452c53b563",
            "default_security_group_id": "sg-07076e1a492d389b7",
            "dhcp_options_id": "dopt-096ff914409dd19b2",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fd0b53deec73ef30",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-027b542452c53b563",
            "owner_id": "891377261650",
            "tags": {
              "Name": "BACKEND_SERVICES_VPC"
            },
            "tags_all": {
              "Name": "BACKEND_SERVICES_VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "SHARED_DATABASE_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:891377261650:vpc/vpc-006fbadea3e56c583",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "12.0.0.0/16",
            "default_network_acl_id": "acl-033b989f95c0d32b9",
            "default_route_table_id": "rtb-01a3998a0243392f5",
            "default_security_group_id": "sg-04df7a95f70f9850b",
            "dhcp_options_id": "dopt-096ff914409dd19b2",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-006fbadea3e56c583",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01a3998a0243392f5",
            "owner_id": "891377261650",
            "tags": {
              "Name": "SHARED_DATABASE_VPC"
            },
            "tags_all": {
              "Name": "SHARED_DATABASE_VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "WEB_APP_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:891377261650:vpc/vpc-0be87c5dc0f7c90a8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07c4d8926302795ed",
            "default_route_table_id": "rtb-03a6400e773d72814",
            "default_security_group_id": "sg-0212a350a51f1e8a9",
            "dhcp_options_id": "dopt-096ff914409dd19b2",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0be87c5dc0f7c90a8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03a6400e773d72814",
            "owner_id": "891377261650",
            "tags": {
              "Name": "WEB_APP_VPC"
            },
            "tags_all": {
              "Name": "WEB_APP_VPC"
            }
          }
        }
      ]
    }
  ]
}